# ai_analyst

./: .coverage  .gitignore  CLAUDE.md  README.md  analyst.py  benchmark_quality.py  interactive.py  pr-6-review.md  pr_body.txt  pyproject.toml  run.py
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/chatgpt-assistant/: action.yml
.github/actions/claude-agent/: action.yml
.github/actions/codex-agent/: action.yml
.github/actions/gemini-assistant/: action.yml
.github/actions/gemini-review/: action.yml
.github/actions/jules-agent/: action.yml
.github/copilot/: mcp.json
.github/scripts/: chatgpt_assistant.py  chatgpt_pr_review.py  claude_pr_review.py  codex_agent.py  gemini_assistant.py  gemini_code_assist.py  gemini_pr_review.py
.github/workflows/: claude-code-review.yml  claude-review.yml  claude.yml  git-actions.yml  google-ai-review.yml  google-ai.yml  merge-gate.yml  openai-codex.yml  openai-review.yml  pr-validation.yml
.jules/: bolt.md  sentinel.md
agentic_ai_project/: Dockerfile  README.md  pyproject.toml  requirements.txt
agentic_ai_project/config/: __init__.py  agent_config.yaml  environment_config.yaml  logging_config.yaml  model_config.yaml
agentic_ai_project/data/checkpoints/: .gitkeep
agentic_ai_project/data/knowledge_base/: .gitkeep
agentic_ai_project/data/logs/: .gitkeep
agentic_ai_project/data/memory/: .gitkeep
agentic_ai_project/data/training/: .gitkeep
agentic_ai_project/examples/: __init__.py  collaborative_agents.py  multi_agent.py  reinforcement_learning.py  single_agent.py
agentic_ai_project/notebooks/: agent_training.ipynb  experiment_results.ipynb  performance_analysis.ipynb
agentic_ai_project/src/: __init__.py
agentic_ai_project/src/agents/: __init__.py  autonomous_agent.py  base_agent.py  collaborative_agent.py  learning_agent.py  reasoning_agent.py
agentic_ai_project/src/core/: __init__.py  decision_maker.py  executor.py  memory.py  planner.py  reasoning.py
agentic_ai_project/src/environment/: __init__.py  base_env.py  simulator.py
agentic_ai_project/src/utils/: __init__.py  logger.py  metrics.py  validator.py  visualizer.py
agentic_ai_project/tests/: __init__.py  test_agents.py  test_environment.py  test_reasoning.py
ai_analyst/: __init__.py
ai_analyst/tools/: __init__.py  statistical.py
ai_analyst/utils/: config.py
benchmarks/: benchmark_normality_implementation.py  benchmark_shapiro_vs_normaltest.py
scripts/: review_pr.py
self_healing/core/: __init__.py  detector.py  engine.py  logger.py  repair.py  validator.py
self_healing/handlers/: __init__.py  analyst_handler.py  ci_handler.py  python_handler.py
self_healing/models/: __init__.py  errors.py  fixes.py
self_healing/utils/: __init__.py  patch_utils.py
src/ai_analyst/: __init__.py  analyst.py  cli.py  interactive.py
src/ai_analyst/mcp_servers/: __init__.py  data_analyst.py
src/ai_analyst/tools/: __init__.py  statistical.py
src/ai_analyst/utils/: __init__.py  config.py
tests/: __init__.py  benchmark_analyst.py  conftest.py  test_analyst.py  test_cli.py  test_config.py  test_context.py  test_correlation_correctness.py  test_error_handling_improvements.py  test_integration.py  test_interactive.py  test_security.py  test_statistical.py  test_sync_wrapper.py  test_tools.py
