[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-analyst"
version = "0.1.0"
description = "Python AI Analyst with MCP integration for data analysis workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Geoff Plymale" }
]
keywords = ["ai", "analyst", "mcp", "langchain", "data-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core - Anthropic SDK for Claude API
    "anthropic>=0.40.0",
    
    # Data analysis
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    
    # Excel support
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
mcp = [
    # MCP Framework for server mode
    "mcp[cli]>=1.0.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-mcp-adapters>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
]
ml = [
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "nbformat>=5.9.0",
]

[project.scripts]
ai-analyst = "ai_analyst.cli:main"
ai-analyst-server = "ai_analyst.mcp_servers.data_analyst:run_server"

[project.urls]
Homepage = "https://github.com/geoffplymale/ai-analyst"
Repository = "https://github.com/geoffplymale/ai-analyst"
Documentation = "https://github.com/geoffplymale/ai-analyst#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_analyst"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["ai_analyst"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/ai_analyst --cov-report=term-missing"
